--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "project1",
+  "name": "simple-calculator-salahproject1",
   "version": "1.0.0",
   "description": "\"Simple Calculator Project1\"",
   "main": "index.js",
