--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   "license": "MIT",
   "dependencies": {
     "chalk": "^5.3.0",
-    "inquirer": "^9.2.16"
+    "inquirer": "^9.2.16",
+    "say": "^0.16.0"
   },
   "devDependencies": {
     "@types/chalk": "^2.2.0",
