--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
   "license": "MIT",
   "dependencies": {
     "chalk": "^5.3.0",
+    "chalk-animation": "^2.0.3",
     "inquirer": "^9.2.16",
     "say": "^0.16.0"
   },
   "devDependencies": {
     "@types/chalk": "^2.2.0",
+    "@types/chalk-animation": "^1.6.3",
     "@types/inquirer": "^9.0.7"
   }
 }
